--- a/README.org
+++ b/README.org
@@ -32,8 +32,12 @@ All good stuff around the world.
 *** C
 
 *** C++
+- [[https://www.state-machine.com/qpcpp/][Quantum Leaps C++]]
 
 *** Shell
+
+*** Web
+- [[https://khan.github.io/Font-Awesome/][Font Awesome]] gives you scalable vector icons that can instantly be customized — size, color, drop shadow, and anything that can be done with the power of CSS.
 
 * Firmware
 
