--- a/README.org
+++ b/README.org
@@ -32,6 +32,10 @@ All good stuff around the world.
 - [[https://github.com/niyumard/Doom-Emacs-Cheat-Sheet][Doom Emacs Cheatsheet]]
 **** james-stoup
 - [[https://github.com/james-stoup/emacs-org-mode-tutorial/tree/main][Emacs Org Mode Tutorial]]
+**** Emacs from Scratch
+- [[https://github.com/daviwil/emacs-from-scratch][Emacs from Scratch]]
+- [[https://github.com/daviwil/emacs-from-scratch/blob/master/show-notes/Emacs-Tips-04.org][How to Give Presentations with Org Mode]]
+- [[https://www.youtube.com/watch?v=vz9aLmxYJB0][YouTube: How to Give Presentations with Org Mode]]
 
 *** C
 
