Fix the conflicts

--- a/README.org
+++ b/README.org
@@ -54,6 +54,9 @@ All good stuff around the world.
 *** Browsers
 - =Nyxt= [[https://nyxt.atlas.engineer/][Nyxt]] is is fully hackable- all of its source code can be introspected, modified, and tweaked to your exact specification.
 
+** Docker
+- [[ https://github.com/docker/doodle.git][docker/doodle]]
+
 * Firmware
 
 * Hardware
