--- a/README.org
+++ b/README.org
@@ -3,6 +3,7 @@
 All good stuff around the world.
 
 * Software
+
 ** IDE and Editor
 *** VS Code
 **** Extensions
@@ -58,6 +59,7 @@ All good stuff around the world.
 - [[https://khan.github.io/Font-Awesome/][Font Awesome]] gives you scalable vector icons that can instantly be customized — size, color, drop shadow, and anything that can be done with the power of CSS.
 
 ** Tools
+
 *** Browsers
 - =Nyxt= [[https://nyxt.atlas.engineer/][Nyxt]] is fully hackable- all of its source code can be introspected, modified, and tweaked to your exact specification.
 
@@ -67,6 +69,10 @@ All good stuff around the world.
 ** Version Control
 - GitLab/GitHub
   [[https://gist.github.com/rxaviers/7360908][Complete list of github markdown emoji markup]]
+
+** IDEs
+- Golang
+  + [[https://github.com/golang/go/wiki/IDEsAndTextEditorPlugins][Editors and IDEs for Go]]
 
 * Firmware
 
