--- a/README.org
+++ b/README.org
@@ -17,6 +17,8 @@ Thanks for the great work.
 - [[https://shortcutworld.com/CodeLite/win/CodeLite_10_Shortcuts][107 Shortcuts for CodeLite 10]]
 *** Neovim
 - [[https://hannadrehman.com/top-neovim-plugins-for-developers-in-2022][Top Neovim plugins for developers in 2022]]
+*** Golang
+  + [[https://github.com/golang/go/wiki/IDEsAndTextEditorPlugins][Editors and IDEs for Go]]
 
 ** Programming Languages
 *** General
@@ -75,16 +77,14 @@ https://github.com/yougg/gonote/blob/main/gogrammar.md
 - GitLab/GitHub
   [[https://gist.github.com/rxaviers/7360908][Complete list of github markdown emoji markup]]
 
-** IDEs
-- Golang
-  + [[https://github.com/golang/go/wiki/IDEsAndTextEditorPlugins][Editors and IDEs for Go]]
-
 * Firmware
 
 * Hardware
 
 * Utilities
 + [[https://www.rapidtables.com/web/color/RGB_Color.html][RGB Color Codes Chart]]
++ SSH Clients
+  - mRemoteNG: Multi-Remote Next Generation Connection Manager
 + Unicode
   + [[https://gist.github.com/ivandrofly/0fe20773bd712b303f78][Unicode table]]
   + [[https://en.wikipedia.org/wiki/List_of_Unicode_characters][List of Unicode Characters on Wikipedia]]
