PlantText web tool

--- a/README.org
+++ b/README.org
@@ -100,4 +100,5 @@ https://github.com/yougg/gonote/blob/main/gogrammar.md
 + Diagrams
   + [[https://kroki.io/examples.html][Kroki - Creates diagrams from textual descriptions!]]
   + [[https://tomgregory.com/using-plantuml-for-digrams-in-a-gitlab-wiki/][Using PlantUML For Diagrams In A GitLab Wiki]]
+  + [[https://www.planttext.com][PlantText - The expert's design tool]]
 * Others
