--- a/README.org
+++ b/README.org
@@ -101,4 +101,5 @@ https://github.com/yougg/gonote/blob/main/gogrammar.md
   + [[https://kroki.io/examples.html][Kroki - Creates diagrams from textual descriptions!]]
   + [[https://tomgregory.com/using-plantuml-for-digrams-in-a-gitlab-wiki/][Using PlantUML For Diagrams In A GitLab Wiki]]
   + [[https://www.planttext.com][PlantText - The expert's design tool]]
+  + [[https://crashedmind.github.io/PlantUMLHitchhikersGuide][The Hitchhiker's Guide to PlanUML]]
 * Others
