--- a/README.org
+++ b/README.org
@@ -65,6 +65,7 @@ Thanks for the great work.
 *** Web
 - [[https://khan.github.io/Font-Awesome/][Font Awesome]] gives you scalable vector icons that can instantly be customized — size, color, drop shadow, and anything that can be done with the power of CSS.
 https://github.com/yougg/gonote/blob/main/gogrammar.md
+*** [[https://github.com/rajasegar/awesome-htmx][Awesome HTMX]]
 ** Tools
 *** TBC
 - .
