--- a/README.org
+++ b/README.org
@@ -1,4 +1,3 @@
-
 #+TITLE Good Stuff
 
 All good stuff.  
@@ -27,6 +26,7 @@ Thanks for the great work.
   +
 *** Python
 - [[https://www.pythoncentral.io/][Python Programming Guides and Tutorials]]
+- [[https://ehmatthes.github.io/pcc/cheatsheets/README.html][Resources for Python Crash Course (1st edition), from No Starch Press]]
 *** Go
 - [[https://buf.build/docs/bsr/introduction][BSR(Buf Schema Registry)]]
 - [[https://github.com/yougg/gonote/blob/main/gogrammar.md][Google Go语言 golang 语法详解笔记]]
@@ -69,6 +69,7 @@ Thanks for the great work.
 - [[https://khan.github.io/Font-Awesome/][Font Awesome]] gives you scalable vector icons that can instantly be customized — size, color, drop shadow, and anything that can be done with the power of CSS.
 https://github.com/yougg/gonote/blob/main/gogrammar.md
 *** [[https://github.com/rajasegar/awesome-htmx][Awesome HTMX]]
+
 ** Tools
 *** TBC
 - .
