--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@ Thanks for the great work.
 ** Programming Languages
 *** General
 - [[https://pegasuswang.readthedocs.io/zh/latest/][PegasusWang 的读书杂记]]
-  +
+  + TBD
 *** Python
 - [[https://www.pythoncentral.io/][Python Programming Guides and Tutorials]]
 - [[https://ehmatthes.github.io/pcc/cheatsheets/README.html][Resources for Python Crash Course (1st edition), from No Starch Press]]
