--- a/README.adoc
+++ b/README.adoc
@@ -171,6 +171,7 @@ https://github.com/plexus/chemacs2[Chemacs 2 is an Emacs profile switcher, it ma
 * Fonts
   ** https://www.nerdfonts.com/font-downloads[Nerd Fonts Download]
     My favorite is SpaceMono.
+  ** https://input.djr.com/[Fonts for code from DJR & Font Bureau]
 * Diagrams
   ** https://kroki.io/examples.html[Kroki - Creates diagrams from textual descriptions!]
   ** https://tomgregory.com/using-plantuml-for-digrams-in-a-gitlab-wiki/[Using PlantUML For Diagrams In A GitLab Wiki]
