Phoenix Code cons

--- a/README.adoc
+++ b/README.adoc
@@ -66,7 +66,7 @@ Eclipse + C++ plugin.
   ** Auto Indent
 * Cons
   ** Auto Indent is slow
-  ** Extension install al
+  ** Extension installation doesn't work well
 
 ==== Netbeans
 * Pros
