--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,7 @@ Thanks for the great work.
   ** `Auto complete` feature
   ** Hints for function arguments
 * Cons
-  ** Search in files doesn't work on Linux with remote X (project path is too long?)
+  ** Search in files doesn't work on Linux with remote X if project path is too deep e.g. in a bitbake sandbox tmp folder.
 
 ==== VS Code
 ===== Extensions
