--- a/README.adoc
+++ b/README.adoc
@@ -85,6 +85,9 @@ Eclipse + C++ plugin.
 ==== Golang
 * https://github.com/golang/go/wiki/IDEsAndTextEditorPlugins[Editors and IDEs for Go]
 
+==== Markdown
+* https://github.com/retext-project/retext[ReText] Simple and lightweight viewer for Ubuntu Linux.
+
 === Programming
 
 ==== General
@@ -151,6 +154,11 @@ https://github.com/plexus/chemacs2[Chemacs 2 is an Emacs profile switcher, it ma
 *  https://github.com/mbasso/awesome-wasm[Awesome Wasm] Collection of awesome things regarding WebAssembly (wasm) ecosystem.
 * https://github.com/yougg/gonote/blob/main/gogrammar.md
 * https://nchan.io/[NCHAN] is a scalable, flexible pub/sub server for the modern web, built as a module for the Nginx web server.
+* Highlight.js
+  ** https://highlightjs.org/[highlightjs.org]
+  ** https://www.jsdelivr.com/package/gh/highlightjs/cdn-release[CDN Release]
+  ** https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/[CDN 11.9.0 build]
+  ** https://github.com/highlightjs/cdn-release[Highlights.js CDN Pre-built Releases GitHub Repo]
 
 ==== https://github.com/facundofarias/awesome-websockets[Awesome WebSockets]
 
